<resources>
    <string name="app_name">Pergaminhos v3</string>
        <string name="hello_world">Hello world!</string>
        <string name="Titulo001">@string/titulo1</string>
        <string name="action_settings">Configurações</string>
        <string name="menu">Menu</string>
        <string name="compartilhar">Compartilhar</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="title_activity_bonus">Bonus</string>
    <string name="mMenu">Menu</string>
    <string name="mConfig">Configurações</string>
    <string name="mSobre">Sobre</string>
    <string name="mAvaliar">Avaliar</string>
    <string name="mSair">Fechar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_mecanismo">Os 10 Pergaminhos</string>
    <string name="title_activity_servicos">Servicos</string>
    <string name="title_activity_compromisso">compromisso</string>
    <string name="title_activity_rosto">rosto</string>
    <string name="Continuar">Continuar\nPergaminhos</string>
    <string name="Config">Configurações</string>
    <string name="Comecar">Nova\n Jornada</string>
    <string name="Onde">Onde\nParei</string>
    <string name="opcaoSim">Ler\nPergaminho</string>
    <string name="opcaoNao">Menu</string>
    <string name="jamais">O fracasso jamais me surpreenderá \nse minha decisão de vencer \nfor suficientemente forte"</string>
    <string name="Aceito1">Aceito, quero INICIAR uma nova jornada.</string>
    <string name="Aceito2">Aceito, quero CONTINUAR minha jornada.</string>
    <string name="title_activity_config">config</string>
        <string name="convite1">
        Voce tem em mãos um valioso material baseado no livro "O maior Vendedor do Mundo" de OG Mandino.\n\n
        São 10 pergaminhos que se seguidos\n conforme as instruções MUDARÃO SUA VIDA.\n\n
        Indicamos ler o Livro para conhecer a\n
        mágica história por traz dos pergaminhos.\n\n
        Conforme segue a tradição para ter a\n
        oportunidade de conhecer esse segredo\n
        é necessário ACEITAR um compromisso:
         </string>
        <string name="eu">"Eu,
        </string>
        <string name="compromisso1">me comprometo em seguir
        </string>
        <string name="compromisso2">fielmente as instruções contidas no pergaminho 1.
        </string>
        <string name="aumenta">A+</string>
    <string name="diminui">A-</string>
    <string name="opcaozero">PERGAMINHOS</string>
    <string name="botaoP1">Hoje começo uma nova vida</string>
    <string name="botaoP2">Saudarei este dia com Amor no Coração</string>
    <string name="botaoP3">Persistirei até Vencer</string>
    <string name="botaoP4">Eu sou o maior milagre da natureza</string>
    <string name="botaoP5">Viverei Hoje como se fosse meu último dia</string>
    <string name="botaoP6">Hoje serei dono de minhas emoções</string>
    <string name="botaoP7">Rirei do Mundo</string>
    <string name="botaoP8">Hoje centuplicarei meu valor</string>
    <string name="botaoP9">Agirei Agora</string>
    <string name="botaoP10">Orientai-me Senhor</string>
    <string name="botaoBonus"> * Bonus * </string>
    <string name="botaoP11">Voltar</string>
    <string name="pt1">Hoje mudo minha pele velha que sofreu, por muito tempo,
    as machucaduras do fracasso e os ferimentos da mediocridade.
    \nHoje renasço e meu berço é uma vinha onde há frutas para todos.
    \nHoje colherei uvas de sabedoria da mais alta e carregada videira da vinha,
    pois elas foram plantadas pelos mais sábios de minha profissão, que me antecederam, geração após geração.
    \nHoje provarei o sabor das uvas destas videiras e, em verdade, engolirei a semente do êxito incrustada
    em cada uva e uma nova vida brotará dentro de mim.
    \nA carreira por mim escolhida é plena de oportunidades, embora repleta de desgosto e desespero,
    e se os corpos daqueles que fracassaram fossem empilhados um em cima do outro,
    lançariam sua sombra sobre todas as pirâmides da Terra. \nContudo, eu não fracassarei como os outros,
    pois em minhas mãos tenho agora o mapa que me guiará por águas perigosas às costas que, ontem mesmo, pareceriam apenas um sonho.
    \nO fracasso não será mais tributo da minha vida. Assim como a natureza não preparou meu corpo para tolerar a dor,
    também não determinou que minha vida sofresse o fracasso. O fracasso, como a dor, é elemento estranho à minha vida.
    No passado eu o aceitei, como aceitei a dor. Agora eu o rejeito e estou preparado pela sabedoria e os princípios
    que me guiarão das sombras para a luz da riqueza, das posições, e da felicidade, bem além dos meus sonhos mais extravagantes,
    quando até mesmo as maçãs douradas do jardim de Hespérides não me parecerão mais do que minha justa recompensa.
    \nO tempo ensina todas as coisa aquele que vive para sempre, mas não tenho o luxo da eternidade.
    \nContudo, dentro do tempo que me foi concedido, vejo-me na obrigação de praticar a paciência,
    pois a natureza jamais age apressadamente. Para criar a oliveira, rainha de todas as árvores,
    cem anos são necessários. Em nove semanas a cebola já está velha.
    \nEu vivo como uma cebola e isto não me agrada.\nAgora, tornar-me-ei na maior das oliveiras e,
    em verdade, no maior dos vendedores.
    \nE como se realizará isto? Pois não tenho nem o conhecimento, nem a experiência para alcançar a grandeza,
    já tropeço na ignorância e caio nas águas da lamúria.
    \nA resposta é simples: começarei a minha jornada desembaraçado do peso de conhecimentos desnecessários e
    de obstáculos da experiência sem significado. A natureza sempre me forneceu conhecimento e instinto maior
    do que qualquer animal da floresta, superior até mesmo ao valor da experiência, em geral superestimado por
    velhos que parecem sábios, mas falam tolices.
    \nEm verdade, a experiência ensina completamente, porém o seu curso de instrução devora os anos dos homens e,
    dessa maneira, o valor de suas lições diminui com o tempo necessário para adquirir-se sua sabedoria especial.
    Seu objetivo desperdiça-se com homens moribundos. Ademais, a experiência é comparável à moda; uma ação que
    resulta em êxito hoje será inapropriável e inaplicável amanhã.
    \nApenas princípios permanecem e estes eu agora possuo, pois as leis que me levarão à grandeza estão contidas
    nas palavras dos pergaminhos. O que eles ensinarão será mais evitar o fracasso do que obter êxito,
    pois o que é o êxito senão um estado de espírito?
    Dois, entre mil sábios, se tanto, definirão o êxito nas mesmas palavras, enquanto o fracasso é sempre
    descrito de apenas um modo. \nO fracasso é a incapacidade do homem em atingir seus objetivos na vida,
    sejam eles quais forem.
    \nNa verdade, a única diferença entre aqueles que falharam e aqueles que tiveram sucesso está na diferença de seus hábitos.
    Bons hábitos são a chave do sucesso e maus hábitos são a porta aberta para o fracasso. Assim, a primeira lei que obedecerei é:
    \n\nformarei bons hábitos e me tornarei escravo deles.\n
    \nQuando criança, fui escravo de meus impulsos; agora sou escravo de meus hábitos, como todos os adultos.
    Rendi minha vontade própria aos anos de hábitos acumulados e os últimos feitos de minha vida já traçam um caminho que ameaça aprisionar meu futuro. Minhas ações são ditadas pelo apetite, paixão, preconceito, avidez, amor, medo, ambiente, hábito, e o pior destes tiranos é o hábito. \nPortanto, se devo ser escravo do hábito, que seja um escravo de bons hábitos. \nMeus maus hábitos devem ser destruídos e novos sulcos preparados para boas sementes.
    \nEu formarei bons hábitos e me tornarei escravo deles.
    \nE como realizarei este difícil feito? Através destes pergaminhos, pois cada um deles contém um princípio que expulsará o mau hábito de minha vida e nela colocará outro que me aproximará do êxito, pois é outra das leis que apenas um hábito pode dominar outro hábito. Assim, para que estas palavras escritas realizem a tarefa escolhida, devo disciplinar-me ao seguinte, que é o primeiro de meus hábitos:
    \nEu lerei cada pergaminho por trinta dias seguidos, da maneira prescrita, antes de passar ao pergaminho seguinte.
    \nPrimeiro, lerei as palavras em silêncio, ao levantar. Depois, lerei em silêncio após almoçar. Finalmente, lerei de novo, antes de retirar-me para o leito, e mais importante, nesta ocasião lerei em voz alta.
    \nNo dia seguinte, repetirei o processo e continuarei dessa maneira por trinta dias. Tomarei então o pergaminho seguinte e repetirei este processo por outros trinta dias. Continuarei assim até viver com cada pergaminho por trinta dias, e minha leitura se tornará um hábito.
    \nE o que será realizado com este hábito? Aqui está o segredo oculto das realizações de todos os homens. Com a repetição das palavras diariamente, elas logo se tornarão parte da minha mente ativa, porém, mais importante, também se infiltrarão em minha outra mente, essa misteriosa fonte que nunca dorme, que cria meus sonhos e frequentemente me faz agir de maneiras que não compreendo.
    \nAssim que as palavras destes pergaminhos forem consumidas pela minha mente misteriosa, eu começarei a despertar a cada manhã com uma vitalidade que jamais conheci antes. Meu vigor aumentará, meu entusiasmo se levantará, meu desejo de encontrar o mundo vencerá todo o medo que um dia conheci ao nascer do sol e serei mais feliz do que jamais acreditei ser possível neste mundo de luta e tristeza.
    \nFinalmente, encontrar-me-ei reagindo em todas as situações que confrontar, como foi ordenado nos pergaminhos, e logo essas ações e reações se tornarão fáceis de executar, pois cada ato, com a prática, torna-se fácil.
    \nAssim, nasce um novo e bom hábito. pois quando um hábito se torna fácil, através de constante repetição, se é um prazer executá-lo, é da natureza do homem executá-lo frequentemente. Quando eu o executo frequentemente, ele se torna um hábito e eu me torno seu escravo; e, desde que seja um hábito, é a minha vontade.
    \n\nHoje começo uma nova vida.
    \n\nJuro solenemente a mim mesmo que nada retardará o crescimento de minha nova vida. Não perderei um dia sequer destas leituras, pois este dia não pode ser recuperado nem posso substituí-lo por outro, Não devo, não quero quebrar o hábito de ler diariamente estes pergaminhos; e, em verdade, os poucos momentos passados cada dia com este hábito são apenas um pequeno preço a pagar pela felicidade e êxito que serão meus.
    \nAo ler e reler as palavras dos pergaminhos a serem obedecidas, nunca permitirei que a brevidade ou a simplicidade de suas palavras me faça encarar a mensagem como se fosse superficial. Milhares de uvas são amassadas para encher uma jarra de vinho, e sua casca e polpa ainda são bicadas pelos pássaros. Assim é com estas uvas de sabedoria das gerações. Muito tem sido filtrado e abalado pelo vento. Apenas a verdade pura permanece destilada nas palavras, para ser lembrada. Beberei segundo as instruções e não perderei uma só gota, e engolirei a semente do êxito.
    \nHoje minha pele velha se assemelha a poeira. Andarei a prumo entre os homens e eles não me reconhecerão, pois hoje sou um novo homem, com uma vida nova.
</string>
</resources>