<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#ffffff"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="center"
    tools:context=".Principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="#ffffff"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/texto1"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical"
                android:paddingTop="7dp"
                android:text="@string/opcaozero"
                android:textColor="@color/texto_simples"
                android:textColorHint="@color/mostarda"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button1"
                style="@style/botao_reto"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/texto1"
                android:layout_centerHorizontal="true"
                android:clickable="false"
                android:text="@string/botaoP1"
                android:textColor="@color/cor_botao"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/button2"
                style="@style/botao_reto"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/button1"
                android:layout_centerHorizontal="true"
                android:text="@string/botaoP2"
                android:textColor="@color/cor_botao"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/button3"
                style="@style/botao_reto"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/button2"
                android:layout_centerHorizontal="true"
                android:text="@string/botaoP3"
                android:textColor="@color/cor_botao"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/button4"
                style="@style/botao_reto"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/button3"
                android:layout_centerHorizontal="true"
                android:text="@string/botaoP4"
                android:textColor="@color/cor_botao"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/button5"
                style="@style/botao_reto"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/button4"
                android:layout_centerHorizontal="true"
                android:text="@string/botaoP5"
                android:textColor="@color/cor_botao"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/button6"
                style="@style/botao_reto"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/button5"
                android:layout_centerHorizontal="true"
                android:text="@string/botaoP6"
                android:textColor="@color/cor_botao"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/button7"
                style="@style/botao_reto"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/button6"
                android:layout_centerHorizontal="true"
                android:text="@string/botaoP7"
                android:textColor="@color/cor_botao"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/button8"
                style="@style/botao_reto"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/button7"
                android:layout_centerHorizontal="true"
                android:text="@string/botaoP8"
                android:textColor="@color/cor_botao"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/button9"
                style="@style/botao_reto"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/button8"
                android:layout_centerHorizontal="true"
                android:text="@string/botaoP9"
                android:textColor="@color/cor_botao"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/button10"
                style="@style/botao_reto"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/button9"
                android:layout_centerHorizontal="true"
                android:text="@string/botaoP10"
                android:textColor="@color/cor_botao"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/buttonBonus"
                style="@style/botaoBonus"
                android:layout_width="@dimen/largbotao"
                android:layout_height="@dimen/altura"
                android:layout_below="@id/button10"
                android:layout_centerHorizontal="true"
                android:text="@string/botaoBonus"
                android:textColor="@color/texto_bruto"
                android:textSize="@dimen/altTextButton" />

            <Button
                android:id="@+id/button11"
                style="@style/botaoCampo"
                android:layout_width="@dimen/tam_botao_lado"
                android:layout_height="@dimen/tam_botao_altura"
                android:layout_below="@+id/buttonBonus"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:text="@string/botaoP11"
                android:textSize="@dimen/altTextButton" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
