<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/imagem_rosto"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-2dp"
        android:gravity="center"
        android:src="@drawable/capa_pergaminho320x460x"/>
    <TextView
        android:id="@+id/texto_rosto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagem_rosto"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/jamais"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/pewter"
        android:textDirection="firstStrong"
        android:textSize="@dimen/tamanhotexto3" />

    <Button
        android:id="@+id/ButtonRostoMeio"
        style="@style/botao_rm"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_below="@id/texto_rosto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:text="@string/Config" />

    <Button
        android:id="@+id/ButtonRosto1"
        style="@style/botao_r1"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="@id/ButtonRostoMeio"
        android:layout_below="@id/texto_rosto"
        android:layout_marginRight="-2dp"
        android:layout_marginTop="40dp"
        android:layout_toStartOf="@+id/ButtonRostoMeio"
        android:clickable="false"
        android:text="@string/Comecar" />

    <Button
        android:id="@+id/ButtonRosto2"
        style="@style/botao_r2"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="@id/ButtonRostoMeio"
        android:layout_below="@id/texto_rosto"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/ButtonRostoMeio"
        android:clickable="false"
        android:text="@string/Continuar" />

    <TextView
        android:id="@+id/produzido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="Produced by HAHAHANDROID"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/hungria"
        android:textSize="8dp" />
</RelativeLayout>
